samples/_failures_safe/1761190106_20b36e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_422c9a62.c: In function ‘main’:
./samples/SAFE/__tmp_422c9a62.c:158:5: error: expected expression at end of input
  158 |     int b =
      |     ^~~
./samples/SAFE/__tmp_422c9a62.c:158:5: error: expected declaration or statement at end of input
